--- a/Source code/index.html
+++ b/Source code/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="OpenHardware Initiative" />
     <meta property="og:description" content="Pioneering the future of hardware acceleration" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/OHW_logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@open_hardware" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/public/OHW_logo.png" />
     <link rel="icon" href="/lovable-uploads/8c21749c-761b-4cf2-85ca-64f204ac61dd.png" type="image/png">
   </head>
 
